--- a/vector-search.ipynb
+++ b/vector-search.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "19d9c5a6",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f88282d6",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
          "type": "string"
         }
        ],
-       "ref": "dcf47ebe-530e-459d-85f6-4c3ddfe2e4ec",
+       "ref": "fcbb0cf3-7205-4bbc-aaf5-52817fc77542",
        "rows": [
         [
          "0",
@@ -292,7 +292,7 @@
        "Name: tagged_description, Length: 5197, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,12 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2c5b48b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "books[\"tagged_description\"].to_csv(\"tagged_descrition.txt\",\n",
+    "books[\"tagged_description\"].to_csv(\"tagged_description.txt\",\n",
     "                                   sep = \"\\n\",\n",
     "                                   index = False,\n",
     "                                   header = False\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "9695b37c",
    "metadata": {},
    "outputs": [
@@ -5525,24 +5525,24 @@
     }
    ],
    "source": [
-    "raw_documents = TextLoader(\"tagged_descrition.txt\").load()\n",
+    "raw_documents = TextLoader(\"tagged_description.txt\").load()\n",
     "text_splitter = CharacterTextSplitter(chunk_size=0, chunk_overlap=0, separator=\"\\n\")\n",
     "documents = text_splitter.split_documents(raw_documents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "a13bc500",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'source': 'tagged_descrition.txt'}, page_content='9780002005883 A NOVEL THAT READERS and critics have been eagerly anticipating for over a decade, Gilead is an astonishingly imagined story of remarkable lives. John Ames is a preacher, the son of a preacher and the grandson (both maternal and paternal) of preachers. It’s 1956 in Gilead, Iowa, towards the end of the Reverend Ames’s life, and he is absorbed in recording his family’s story, a legacy for the young son he will never see grow up. Haunted by his grandfather’s presence, John tells of the rift between his grandfather and his father: the elder, an angry visionary who fought for the abolitionist cause, and his son, an ardent pacifist. He is troubled, too, by his prodigal namesake, Jack (John Ames) Boughton, his best friend’s lost son who returns to Gilead searching for forgiveness and redemption. Told in John Ames’s joyous, rambling voice that finds beauty, humour and truth in the smallest of life’s details, Gilead is a song of celebration and acceptance of the best and the worst the world has to offer. At its heart is a tale of the sacred bonds between fathers and sons, pitch-perfect in style and story, set to dazzle critics and readers alike.')"
+       "Document(metadata={'source': 'tagged_description.txt'}, page_content='9780002005883 A NOVEL THAT READERS and critics have been eagerly anticipating for over a decade, Gilead is an astonishingly imagined story of remarkable lives. John Ames is a preacher, the son of a preacher and the grandson (both maternal and paternal) of preachers. It’s 1956 in Gilead, Iowa, towards the end of the Reverend Ames’s life, and he is absorbed in recording his family’s story, a legacy for the young son he will never see grow up. Haunted by his grandfather’s presence, John tells of the rift between his grandfather and his father: the elder, an angry visionary who fought for the abolitionist cause, and his son, an ardent pacifist. He is troubled, too, by his prodigal namesake, Jack (John Ames) Boughton, his best friend’s lost son who returns to Gilead searching for forgiveness and redemption. Told in John Ames’s joyous, rambling voice that finds beauty, humour and truth in the smallest of life’s details, Gilead is a song of celebration and acceptance of the best and the worst the world has to offer. At its heart is a tale of the sacred bonds between fathers and sons, pitch-perfect in style and story, set to dazzle critics and readers alike.')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5553,7 +5553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "42cc6fbb",
    "metadata": {},
    "outputs": [],
@@ -5566,26 +5566,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "37c47723",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(id='8f5b121d-6ffe-43a3-a07d-c01362aaac8d', metadata={'source': 'tagged_descrition.txt'}, page_content='9780786808069 Children will discover the exciting world of their own backyard in this introduction to familiar animals from cats and dogs to bugs and frogs. The combination of photographs, illustrations, and fun facts make this an accessible and delightful learning experience.'),\n",
-       " Document(id='d31f1c68-c45b-473d-bdfb-f0abe252f191', metadata={'source': 'tagged_descrition.txt'}, page_content=\"9780786808380 Introduce your babies to birds, cats, dogs, and babies through fine art, illustration, and photographs. These books are a rare opportunity to expose little ones to a range of images on a single subject, from simple child's drawings and abstract art to playful photos. A brief text accompanies each image, introducing the baby to some basic -- and sometimes playful -- information about the subjects.\"),\n",
-       " Document(id='56589767-a71b-4949-8ef8-51fb0afda911', metadata={'source': 'tagged_descrition.txt'}, page_content=\"9780786808397 Introduce your baby to birds, cats, dogs, and babies through fine art, illustration, and photographs. These books are a rare opportunity to exopse little ones to a range of images on a single subject, from simple child's drawings and abstract art to playful photos. A brief text accompanies each image, introducing baby to some basic -- and sometimes playful -- information about the subjects.\"),\n",
-       " Document(id='5c221139-fd5d-4d5c-a800-a4421cd4461c', metadata={'source': 'tagged_descrition.txt'}, page_content=\"9780786808373 Introducing your baby to birds, cats, dogs, and babies through fine art, illsutration and photographs. These books are a rare opportunity to expose little ones to a range of images on a single subject, from simple child's drawings and abstract art to playful photos. A brief text accompanies each image, introducing baby to some basic -- and sometimes playful -- information on the subjects.\"),\n",
-       " Document(id='3aca315a-27b4-48c1-95f0-43aa4f80878a', metadata={'source': 'tagged_descrition.txt'}, page_content=\"9780689861130 Children will love joining in and imitating the animal noises and sounds in this big, bold board book format, illustrated with Sandra Boynton's seriously silly signature animals.\"),\n",
-       " Document(id='eab697f0-5791-43a1-9b16-1fa5ef8f21e5', metadata={'source': 'tagged_descrition.txt'}, page_content='9780789458209 Photographs and text explore the anatomy and life cycle of trees, examining the different kinds of bark, seeds, and leaves, the commercial processing of trees to make lumber, the creatures that live in trees, and other aspects.'),\n",
-       " Document(id='95a1d6b5-0521-4c39-b631-6166d6858da5', metadata={'source': 'tagged_descrition.txt'}, page_content='9780786808717 A very special puddle sets Violet the mouse off on her latest nature discovery. It is through this puddle that Violet observes the effect rain has on the world around her. A Mylar puddle on the last page offers children a chance to see their reflection in a puddle, just like Violet!'),\n",
-       " Document(id='e63c011c-3089-4cfb-93c6-a34a949dc62e', metadata={'source': 'tagged_descrition.txt'}, page_content='9780786812912 In her first illustrated book for children, the Pulitzer Prize–winning author Toni Morrison introduces three feisty children who show grown-ups what it really means to be a kid.'),\n",
-       " Document(id='2dfebba1-a70f-4503-93f1-9161c66d53b2', metadata={'source': 'tagged_descrition.txt'}, page_content='\"9780067575208 First published more than three decades ago, this reissue of Rachel Carson\\'s award-winning classic brings her unique vision to a new generation of readers. Stunning new photographs by Nick Kelsh beautifully complement Carson\\'s intimate account of adventures with her young nephew, Roger, as they enjoy walks along the rocky coast of Maine and through dense forests and open fields, observing wildlife, strange plants, moonlight and storm clouds, and listening to the \"\"living music\"\" of insects in the underbrush. \"\"If a child is to keep alive his inborn sense of wonder.\"\" Writes Carson, \"\"he needs the companionship of at least one adult who can share it, rediscovering with him the joy, excitement and mystery of the world we live in.\"\" The Sense of Wonder is a refreshing antidote to indifference and a guide to capturing the simple power of discovery that Carson views as essential to life. In her insightful new introduction, Linda Lear remembers Rachel Carson\\'s groundbreaking achievements in the context of the legendary environmentalist\\'s personal commitment to introducing young and old to the miracles of nature. Kelsh\\'s lush photographs inspire sensual, tactile reactions: masses of leaves floating in a puddle are just waiting to be scooped up and examined more closely. An image of a narrow path through the trees evokes the earthy scent of the woods after a summer rain. Close-ups of mosses and miniature lichen fantasy-lands will spark innocent\\'as well as more jaded\\'imaginations. Like a curious child studying things underfoot and within reach, Kelsh\\'s camera is drawn to patterns in nature that too often elude hurried adults\\'a stand of beech trees in the springtime, patches of melting snow and the ripples from a pebble tossed into a slow-moving stream. The Sense of Wonder is a timeless volume that will be passed on from children to grandchildren, as treasured as the memory of an early-morning walk when the song of a whippoorwill was heard as if for the first time.\"'),\n",
-       " Document(id='a2d9b0ff-b973-4f8c-84c8-4b62afb7b2bf', metadata={'source': 'tagged_descrition.txt'}, page_content='9780763620875 When Judy Moody gets serious about protecting the environment, her little brother Stink thinks she is overdoing it, but she manages to inspire her third grade class to undertake an award-winning, environment-saving project. Reprint.')]"
+       "[Document(id='eb8ef5c8-56d3-4ae0-8795-11e18b2bff42', metadata={'source': 'tagged_description.txt'}, page_content='9780786808069 Children will discover the exciting world of their own backyard in this introduction to familiar animals from cats and dogs to bugs and frogs. The combination of photographs, illustrations, and fun facts make this an accessible and delightful learning experience.'),\n",
+       " Document(id='5d9a4417-6750-415e-b711-61d6864d263a', metadata={'source': 'tagged_description.txt'}, page_content=\"9780786808380 Introduce your babies to birds, cats, dogs, and babies through fine art, illustration, and photographs. These books are a rare opportunity to expose little ones to a range of images on a single subject, from simple child's drawings and abstract art to playful photos. A brief text accompanies each image, introducing the baby to some basic -- and sometimes playful -- information about the subjects.\"),\n",
+       " Document(id='d613cb09-3b20-4664-a20a-bc206555ea0b', metadata={'source': 'tagged_description.txt'}, page_content=\"9780786808397 Introduce your baby to birds, cats, dogs, and babies through fine art, illustration, and photographs. These books are a rare opportunity to exopse little ones to a range of images on a single subject, from simple child's drawings and abstract art to playful photos. A brief text accompanies each image, introducing baby to some basic -- and sometimes playful -- information about the subjects.\"),\n",
+       " Document(id='082d8dc5-94b9-46a4-b3da-ad3c6087abf5', metadata={'source': 'tagged_description.txt'}, page_content=\"9780786808373 Introducing your baby to birds, cats, dogs, and babies through fine art, illsutration and photographs. These books are a rare opportunity to expose little ones to a range of images on a single subject, from simple child's drawings and abstract art to playful photos. A brief text accompanies each image, introducing baby to some basic -- and sometimes playful -- information on the subjects.\"),\n",
+       " Document(id='61b4068d-2eef-45fd-8342-b1fb852b5d8f', metadata={'source': 'tagged_description.txt'}, page_content=\"9780689861130 Children will love joining in and imitating the animal noises and sounds in this big, bold board book format, illustrated with Sandra Boynton's seriously silly signature animals.\"),\n",
+       " Document(id='9452d268-f6ef-4372-b025-4714d4f5c9a3', metadata={'source': 'tagged_description.txt'}, page_content='9780789458209 Photographs and text explore the anatomy and life cycle of trees, examining the different kinds of bark, seeds, and leaves, the commercial processing of trees to make lumber, the creatures that live in trees, and other aspects.'),\n",
+       " Document(id='b190ec83-694d-4e77-9e33-ad83b1c01608', metadata={'source': 'tagged_description.txt'}, page_content='9780786808717 A very special puddle sets Violet the mouse off on her latest nature discovery. It is through this puddle that Violet observes the effect rain has on the world around her. A Mylar puddle on the last page offers children a chance to see their reflection in a puddle, just like Violet!'),\n",
+       " Document(id='980f7126-7211-4171-bebb-221e6775db41', metadata={'source': 'tagged_description.txt'}, page_content='9780786812912 In her first illustrated book for children, the Pulitzer Prize–winning author Toni Morrison introduces three feisty children who show grown-ups what it really means to be a kid.'),\n",
+       " Document(id='c9a557d6-eb15-4e81-b817-2707ea613146', metadata={'source': 'tagged_description.txt'}, page_content='\"9780067575208 First published more than three decades ago, this reissue of Rachel Carson\\'s award-winning classic brings her unique vision to a new generation of readers. Stunning new photographs by Nick Kelsh beautifully complement Carson\\'s intimate account of adventures with her young nephew, Roger, as they enjoy walks along the rocky coast of Maine and through dense forests and open fields, observing wildlife, strange plants, moonlight and storm clouds, and listening to the \"\"living music\"\" of insects in the underbrush. \"\"If a child is to keep alive his inborn sense of wonder.\"\" Writes Carson, \"\"he needs the companionship of at least one adult who can share it, rediscovering with him the joy, excitement and mystery of the world we live in.\"\" The Sense of Wonder is a refreshing antidote to indifference and a guide to capturing the simple power of discovery that Carson views as essential to life. In her insightful new introduction, Linda Lear remembers Rachel Carson\\'s groundbreaking achievements in the context of the legendary environmentalist\\'s personal commitment to introducing young and old to the miracles of nature. Kelsh\\'s lush photographs inspire sensual, tactile reactions: masses of leaves floating in a puddle are just waiting to be scooped up and examined more closely. An image of a narrow path through the trees evokes the earthy scent of the woods after a summer rain. Close-ups of mosses and miniature lichen fantasy-lands will spark innocent\\'as well as more jaded\\'imaginations. Like a curious child studying things underfoot and within reach, Kelsh\\'s camera is drawn to patterns in nature that too often elude hurried adults\\'a stand of beech trees in the springtime, patches of melting snow and the ripples from a pebble tossed into a slow-moving stream. The Sense of Wonder is a timeless volume that will be passed on from children to grandchildren, as treasured as the memory of an early-morning walk when the song of a whippoorwill was heard as if for the first time.\"'),\n",
+       " Document(id='97f37304-1c2e-4b11-bdc9-5d03df789c6e', metadata={'source': 'tagged_description.txt'}, page_content='9780763620875 When Judy Moody gets serious about protecting the environment, her little brother Stink thinks she is overdoing it, but she manages to inspire her third grade class to undertake an award-winning, environment-saving project. Reprint.')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5598,7 +5598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "8071f746",
    "metadata": {},
    "outputs": [
@@ -5677,7 +5677,7 @@
          "type": "string"
         }
        ],
-       "ref": "7959db52-e031-4193-a11f-afbee8b79200",
+       "ref": "9075eb25-896f-4d0a-8b5b-b88fcdf78ba8",
        "rows": [
         [
          "3747",
@@ -5779,7 +5779,7 @@
        "3747  9780786808069 Children will discover the excit...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5790,7 +5790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "25f6e647",
    "metadata": {},
    "outputs": [],
@@ -5812,7 +5812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "0ba47d4b",
    "metadata": {},
    "outputs": [
@@ -5891,7 +5891,7 @@
          "type": "string"
         }
        ],
-       "ref": "b09ba2f2-b677-4b42-a7df-0849589492f5",
+       "ref": "cad5fabf-f3ee-4e85-851a-48cca2ba1962",
        "rows": [
         [
          "31",
@@ -6356,7 +6356,7 @@
        "812  9780142302279 Poems tell the stories of a smar...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
